Fix lexer; add stage1 program

--- a/cxx/final/Makefile
+++ b/cxx/final/Makefile
@@ -1,5 +1,12 @@
+.PHONY: all
+
 CXX ?= g++
 CXXFLAGS ?= $(shell echo $$(cat compile_flags.txt))
 
-main.out: *.cpp *.hpp
-	$(CXX) $(CXXFLAGS) -O1 -o main.out *.cpp
+LIBCXXFILES := $(shell find lib -type f -name '*.cpp')
+LIBHXXFILES := $(shell find lib -type f -name '*.hpp')
+
+all: stage1.out
+
+stage1.out: stage1.cpp $(LIBCXXFILES) $(LIBHXXFILES)
+	$(CXX) $(CXXFLAGS) -O1 -o $@ $< $(LIBCXXFILES)
